adde weekly test

--- a/Weekly Test-2/index.html
+++ b/Weekly Test-2/index.html
@@ -10,8 +10,7 @@
                 <hr>
                 <div>
                     <a href="https://deepak1086.github.io/GEEKSTER-HW/Classwork-1/index.html" target="rightpanel">
-                        <img src="./Screenshot 2024-05-26 110933.png" alt="resume" width="20%" height="150px"></a>
-                </div>
+                        <img src="Screenshot 2024-05-26 205926.png" alt="">
                 <hr>
                 <br>
                 <p>Project 2 - Photo Cat App
@@ -19,14 +18,14 @@
                 </p>
                 <hr>
                 <div>
-                    <a href="https://nileshtiwari04.github.io/FS-21-Assignments/HTML%20Assignments/HTML-CW-2/index.html" target="rightpanel">
-                        <img src="./Screenshot 2024-05-26 111029.png" alt="photo cat app" width="20%" height="150px"></a>
+                    <a href="https://deepak1086.github.io/fs-21-Assignment/html/cat/index.html" target="rightpanel">
+                        <img src="./Screenshot 2024-05-26 211059.png" alt="photo cat app" width="20%" height="150px"></a>
                 </div>
                 <hr><br>
                 <p>Project 3 - Form</p>
                 <hr><div>
-                    <a href="https://nileshtiwari04.github.io/FS-21-Assignments/HTML%20Assignments/cw-form/index.html" target="rightpanel">
-                        <img src="./Screenshot 2024-05-26 111056.png" alt="form" width="20%" height="150px"></a>
+                    <a href="https://deepak1086.github.io/GEEKSTER-HW/Classwork-3/index.html" target="rightpanel">
+                        <img src="./Screenshot 2024-05-26 213451.png" alt="form" width="20%" height="150px"></a>
 
                 </div>
                 <hr><br>
